[package]
name = "basis"
version = "0.1.0"
authors = ["ShaneEverittM <shane.everitt.murphy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.40"
num-traits = "0.2.14"

[dependencies.neon]
version = "0.8.0"
default-features = false
features = ["napi-runtime"]
